# Project_c6

./: .build_config  .gitignore  Kconfig.zephyr  Makefile  README.md  build.sh  exclude.txt  genpatch.sh  nano.21873.save  [A[B  [A[B.pub
arch/: Kconfig
ext/: Kbuild  (+1 more)
ext/actions/audio/: CMakeLists.txt  Kconfig  Makefile  audio_aps.c  audio_flinger.c  audio_multicore_sync.c  audio_policy.c  audio_policy.h  audio_record.c  audio_record.h  audio_shell.c  audio_stream.c  audio_stream.h  audio_system.c  audio_system.h  audio_track.c  audio_track.h  audio_tws_aps.c  audio_tws_aps_snoop.c  bluetooth_tws_observer.h  pcm_data.c  volume_manager.c  volume_manager.h
ext/actions/audio/libaudio/: CMakeLists.txt  Makefile  bluetooth_tws_observer.c  simple_tws_observer.c
ext/actions/base/: CMakeLists.txt  Kconfig  Makefile
ext/actions/base/core/: Kconfig  Makefile  app_manager.c  msg_manager.c  srv_manager.c  srv_manager_inner.h
ext/actions/base/include/core/: app_manager.h  mem_manager.h  msg_manager.h  property_manager.h  srv_manager.h
ext/actions/base/include/utils/: acts_ringbuf.h  crc.h  energy_statistics.h  hex_str.h  logic.h  timeline.h  trace.h
ext/actions/base/include/utils/stream/: clone_stream.h  letws_ota_stream.h  ringbuff_stream.h  stream.h  uart_stream.h
ext/actions/base/include/utils/tflv/: tflv.h
ext/actions/base/memory/: Kconfig  Makefile  mem_inner.h  mem_manager.c  mem_page.c  mem_pool.c  mem_slab.c
ext/actions/base/property/: CMakeLists.txt  Kconfig  Makefile  property_cache.c  property_manager.c
ext/actions/base/utils/: CMakeLists.txt  Kconfig  Makefile
ext/actions/base/utils/acts_ringbuf/: CMakeLists.txt  acts_ringbuf.c
ext/actions/base/utils/cbuf/: Makefile
ext/actions/base/utils/cbuf/include/: cbuf.h
ext/actions/base/utils/cbuf/src/: cbuf.c
ext/actions/base/utils/crc/: crc.c
ext/actions/base/utils/energy_statistics/: CMakeLists.txt
ext/actions/base/utils/img_load/: Kconfig  Makefile  img_load.c
ext/actions/base/utils/iterator/: CMakeLists.txt  file_iterator.c  file_plist_iterator.c  iterator.c
ext/actions/base/utils/logic/: Makefile
ext/actions/base/utils/stream/: CMakeLists.txt  Kconfig  Makefile  bufferstream.c  cdc_uart_stream.c  clonestream.c  fstream.c  loop_fstream.c  psramstream.c  ringbuff_stream.c  stream.c  stream_internal.h  uart_stream.c
ext/actions/base/utils/tflv/: Makefile  tflv.c
ext/actions/base/utils/timeline/: Makefile  timeline.c
ext/actions/base/utils/trace/: Kconfig  Makefile
ext/actions/base/utils/transcode/: Makefile  hex_str.c
ext/actions/display/: CMakeLists.txt  Kconfig  led_manager.c  ui_manager.c
ext/actions/display/include/: bitmap_font_api.h  display_surface.h  graphic_buffer.h  lvgl_bitmap_font.h  lvgl_res_loader.h  lvgl_virtual_display.h  res_manager_api.h  ui_graphics.h  ui_mem.h  ui_region.h  view_manager.h
ext/actions/media/: CMakeLists.txt  Kconfig  Makefile  codec_config.c  ex_mic_stream.c  media_effect_param.c  media_mem.c  media_player.c
ext/actions/media/charge6_ic_driver/: Makefile  mcu_ui_process.c
ext/actions/media/charge6_ic_driver/MSPM0L/: Makefile  back_driver.c  driver.c
ext/actions/media/charge6_ic_driver/aw9523b/: Makefile  aw9523b_reg.h  driver.c
ext/actions/media/charge6_ic_driver/battery_security/: Makefile  hm_gauge_bq28z610_security.c  hm_gauge_bq28z610_security.h  sha1.c
ext/actions/media/charge6_ic_driver/ls8a10049t/: driver.c
ext/actions/media/include/: mcu_manager_supply.h  media_effect_param.h  media_mem.h  media_player.h  media_service.h  media_type.h  pd_manager_supply.h
ext/actions/media/libal/: CMakeLists.txt  Kconfig  Makefile  k1_mp3_p.lib
ext/actions/media/libal/csky/: Kconfig
ext/actions/media/libal/libape_parser/: CMakeLists.txt  ape_parser.c
ext/actions/media/libal/libflac_parser/: CMakeLists.txt  flac_parser.c
ext/actions/media/libal/libmp3_parser/: CMakeLists.txt  my_mp3_parser.c
ext/actions/media/libal/libwav_parser/: CMakeLists.txt  wav_parser.c
ext/actions/media/libal/libwma_parser/: CMakeLists.txt  wma_parser.c
ext/actions/media/libwltmcu/: Kconfig  Makefile  pd_process.c
ext/actions/media/libwltmcu/pd/: Makefile
ext/actions/ota/libota/: CMakeLists.txt  Makefile  hpatch.c  hpatch.h  libota_version.c  ota_breakpoint.c  ota_breakpoint.h  ota_file_patch.c  ota_file_patch.h  ota_image.c  ota_image.h  ota_manifest.c  ota_manifest.h  ota_storage.c  ota_storage.h  ota_upgrade.c
ext/actions/ota/minlzma/: CMakeLists.txt  Makefile  dictbuf.c  inputbuf.c  lzma2dec.c  lzmadec.c  rangedec.c  xzcrc.c  xzstream.c  xzstream.h
ext/actions/system/: CMakeLists.txt  Kconfig  Makefile  app_switcher.c  esd_manager.c  sys_event.c  sys_manager.c  sys_monitor.c  sys_power_off.c  sys_shell.c  sys_soc_uuid.c  sys_standby.c  sys_wakelock.c  system_init.c
ext/actions/system/act_event/: Kconfig  Kconfig.module  Makefile  act_event.c  act_event_inner.h  act_event_output.c  act_event_shell.c  act_event_test.c  flash_buffer.c  flash_buffer.h
ext/actions/system/act_event/easyflash/: CMakeLists.txt  Makefile  easyflash.h  ef_cfg.h  ef_def.h  ef_log.c  ef_port.c
ext/actions/system/fm/: Makefile  fm_manager.c
ext/actions/system/fs_manager/: CMakeLists.txt  Kconfig  Makefile  fs_manager.c
ext/actions/system/hotplug/: CMakeLists.txt  Kconfig  hotplug_card.c  hotplug_charger.c  hotplug_linein.c  hotplug_manager.c  hotplug_usb.c
ext/actions/system/include/: alarm_manager.h  app_switch.h  hotplug_manager.h  input_manager.h  os_common_api.h  pd_manager.h  power_manager.h  serial_flasher.h  sys_event.h  sys_manager.h  sys_wakelock.h  system_util.h  tts_manager.h
ext/actions/system/input/: CMakeLists.txt  Kconfig  Makefile  input_encoder.c  input_keypad.c  input_manager.c  input_manager_inner.h  input_pointer.c
ext/actions/system/power/: CMakeLists.txt  Kconfig  Makefile  power_manager.c
ext/actions/system/serial_flasher/: Kconfig  Makefile  serial_flasher.c  serial_flasher_command_letws_stream.c  serial_flasher_inner.h
ext/actions/system/tts/: CMakeLists.txt  Kconfig  Makefile  key_tone.c  tts_manager.c  tts_manager_merge_mode.c
(+1652 files in other folders)
